Updated config file to allow cors for all endpoint and added prod environment